store nearby api implemented
